Fix - Pauta e observações no PDF, quebra de linha, wrap

--- a/client/src/components/Ata/AtaModel/AtaTemplate.css
+++ b/client/src/components/Ata/AtaModel/AtaTemplate.css
@@ -29,3 +29,27 @@ h2 {
   border: 1px solid black;
   height: 2.42cm;
 }
+
+/* .breakline {
+  word-wrap: break-word !important;
+  overflow-wrap: break-word !important;  
+  width: 100% !important;
+  white-space: pre-line !important;
+  word-break: break-all;
+} */
+
+.table {
+  table-layout: fixed !important;
+  width: 100% !important;
+}
+
+.breakline {
+  word-wrap: break-word !important;
+  overflow-wrap: break-word !important;
+  white-space: pre-line !important;
+  padding: 0px 10px !important;
+}
+
+/* .textCell {
+  border: none !important;
+} */
